--- a/WebSite/choose.html
+++ b/WebSite/choose.html
@@ -26,7 +26,7 @@
         </script>
             <br>
         <p>
-            In this area of our website, you can buy presents connecting to Amphibians. 
+            For this area of our website, you can buy presents connecting to Amphibians. 
             All the money will be donated for program fo saving amphibians around the world.
             Since the 80s of the 20th century, there has been a dramatic decline in amphibian
             populations worldwide. About a third of the species are currently in danger of extinction,
